# RMusicPlayer

./: CMakeLists.txt  LICENSE.md  README.md
cmake/: FindFMOD.cmake  MSVC.cmake
inc/: RMusicPlayerClasses.h  RMusicPlayerPrivate.h  RMusic_Config.h
src/: RMusic_Config.cpp  RMusic_Player.cpp
